--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="./Images/Gravellogo.jpg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <!-- Meta tags for SEO -->
+  <meta name="description" content="Gravel Geo-Technical Works - Leading Soil Testing Company Offering Comprehensive Services">
+  <meta name="keywords" content="gravel, soil testing, geotechnical engineering, construction, soil analysis">
+  <meta name="author" content="Gravel Geo-Technical Works">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:title" content="Gravel Geo-Technical Works">
+  <meta property="og:description" content="Leading Soil Testing Company Offering Comprehensive Services">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="./Images/Gravellogo.jpg">
+  <meta property="og:url" content="https://www.example.com">
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Gravel Geo-Technical Works">
+  <meta name="twitter:description" content="Leading Soil Testing Company Offering Comprehensive Services">
+  <meta name="twitter:image" content="%PUBLIC_URL%/twitter-image.jpg">
+  <!-- Title -->
+  <title>Gravel Geo-Technical Works</title>
+</head>
+<body>
+  <div id="root"></div>
+</body>
 </html>
